<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvFilterMenuName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/filters_menu_name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSortSelectedMenuName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_sort_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPopularity"
            style="@style/ActionItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_name_popularity" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.4"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/tvTitleAscending"
            style="@style/ActionItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_name_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.4"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/tvDateAscending"
            style="@style/ActionItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_name_date_descending" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/bottom_sheet_filter_by_date_title"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tvDateFrom"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="0.5"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@drawable/rounded_corners"
                android:layout_marginEnd="8dp"
                android:paddingStart="5dp"
                android:hint="@string/et_date_from_hint" />

            <TextView
                android:id="@+id/tvDateTo"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="0.5"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@drawable/rounded_corners"
                android:paddingStart="5dp"
                android:layout_marginStart="8dp"
                android:hint="@string/et_date_to_hint">

            </TextView>
        </LinearLayout>

        <Button
            android:id="@+id/btnGetFilterResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/button_show_filter_result"
            android:textColor="@color/white" />

    </LinearLayout>